--- a/3week/practice/pr03-02-flex-onepage-ans.html
+++ b/3week/practice/pr03-02-flex-onepage-ans.html
@@ -61,7 +61,7 @@
         <div class="msg">      
           <p><img src="./img/quot-1.png"></p>
           <p>코딩은 사고의 범위를 넓혀주고, 더 나은 생각을 할 수 있게 만들며, <br>분야에 상관없이 모든 문제에 대해 새로운 해결책을 생각할 수 있는 힘을 길러주는 것"<br> <span>- 빌 게이츠 - </span></p>
-          <p><img src="./img/quot-2.png"</p>
+          <p><img src="./img/quot-2.png"></p>
         </div>
       </div>
     </div>    
